--- a/static/css/gotohugo.css
+++ b/static/css/gotohugo.css
@@ -26,27 +26,6 @@
 	}
 }
 
-tt,
-code,
-pre,
-kbd,
-samp {
-	font-family: "Roboto Mono", monospace;
-	font-size: .95rem;
-	line-height: 1.45;
-}
-
-pre {
-	/* If content exceeds height of container, overflow! */
-	overflow-x: auto;
-}
-
-.gotohugo p {
-	margin-top: 0.8em;
-	margin-right: 0em;
-	margin-bottom: 0.8em;
-	margin-left: 0em;
-}
 
 .gotohugo p:empty {
 	/* Hide auto-generated empty elements... */
@@ -59,39 +38,21 @@ pre {
 	display: inline;
 }
 
-.gotohugo .doc h1,
-.gotohugo .doc h2,
-.gotohugo .doc h3,
-.gotohugo .doc h4,
-.gotohugo .doc h5 {
+.doc h1,
+.doc h2,
+.doc h3,
+.doc h4,
+.doc h5 {
 	margin-top: 1.6em;
 }
 
-.gotohugo .doc {
-	font-size: 1rem;
-	min-width: 20em;
-	max-width: 33em;
-	width: auto;
-	padding-top: 0em;
-	padding-left: 0em;
-	overflow-x: visible;
-	margin-right: auto;
-	margin-left: auto;
-	/*margin-bottom: 1.6em;*/
-}
-
-.gotohugo .summary {
-	margin: 0em auto 0em auto;
-	padding: 0em 0em 0em 0em;
-}
-
 .gotohugo .source {
-	display: table;
 	padding-left: 1em;
 	margin-right: auto;
 	margin-left: auto;
 	margin-bottom: 1em;
 	margin-top: 1em;
+	overflow-x: auto;
 }
 
 .gotohugo .ccpair {
@@ -161,7 +122,7 @@ pre {
 
 
 /* Narrow viewports */
-@media only screen and (max-width: 60em) {
+@media only screen and (max-width: 45em) {
 
 	.gotohugo .source {
 		display: block;
@@ -192,7 +153,6 @@ pre {
 	}
 
 	.gotohugo .doc {
-		min-width: 0em;
 		padding-top: 0.1em;
 	}
 
@@ -206,7 +166,7 @@ pre {
 }
 
 /* Very narrow viewports */
-@media only screen and (max-width: 45em) {
+@media only screen and (max-width: 30em) {
 
 	.gotohugo .ccpair {
 		padding: 0em;
